# snakemake-auth-plugins

oidc-auth-plugin/: README.md  pyproject.toml
oidc-auth-plugin/oidc_auth_plugin/: __init__.py
snakemake-executor-plugin-auth-tes/: CHANGELOG.md  pyproject.toml
snakemake-executor-plugin-auth-tes/snakemake_executor_plugin_auth_tes/: __init__.py
snakemake-executor-plugin-auth-tes/tests/: tests.py
snakemake-storage-plugin-http/: pyproject.toml
snakemake-storage-plugin-http/snakemake_storage_plugin_http/: __init__.py
snakemake-storage-plugin-s3/: pyproject.toml
snakemake-storage-plugin-s3/snakemake_storage_plugin_s3/: __init__.py
